--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		content="width=device-width, user-scalable=no initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/media.css">
-	<title>Go corona</title>
+	<title>bad code</title>
 
 </head>
 
